# CHAPPIE

./: .gitignore  license.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: pytest-coverage-comment.yml  test-data-services.yml  test.yml
CHAPPIE/: __init__.py  get.py  layer_query.py  parcels.py  utils.py
CHAPPIE/Hazards/: CHAPPIE20231108_Tornado_Process.R  FLROAR20231108_Torn_AOI_Int_1996_2016.csv  tornadoes.py
CHAPPIE/Hazards/SeaLevelRise/: FLROAR20231227_Past_Sea_Level_Process.R
CHAPPIE/Hazards/StormSurge/: CHAPPIE20231227_Storm_Surge_Process_GitHub.R
CHAPPIE/access/OSMnx/: OSMnx_attempt1.ipynb  Route_transfer_tests.ipynb  esri_routing_compared.ipynb
CHAPPIE/access/timeMatrix/: EPA_Generate_Cost_Matrices.py  EPA_Generate_Cost_Matrices.pyt  updated2_Generate_Cost_Matrices_PRO.pyt  updated_Generate_Cost_Matrices_PRO.py  updated_Generate_Cost_Matrices_PRO.pyt
CHAPPIE/assets/: cultural.py  education.py  emergency.py  food.py  hazard_infrastructure.py  health.py  lyrpackageunzip and import gdb_recreationalareas.py  recreation.py  recreationalAreas.py  transit.py
CHAPPIE/assets/bluespace/: get_BEACON.py
CHAPPIE/eco_services/: nlcd.py  soils.py  wq.py
CHAPPIE/hazards/: CHAPPIE20241001_Hazard_Losses.R  __init__.py  flood.py  technological.py  tornadoes.py  tropical_cyclones.py  weather.py
CHAPPIE/hazards/SeaLevelRise/: FLROAR20231227_Past_Sea_Level_Process.R
CHAPPIE/hazards/StormSurge/: CHAPPIE20231227_Storm_Surge_Baldwin_County_example.rda  (+2 more)
CHAPPIE/household/: __init__.py  svi.py
CHAPPIE/tests/: test_SVI.py  test_cultural_assets.py  test_edu_assets.py  test_emergency_assets.py  test_flood.py  test_food_assets.py  test_generalized.py  test_health_assets.py  test_import.py  test_infrastructure_assets.py  test_nlcd.py  test_parcels.py  test_rec_areas.py  test_rec_assets.py  test_technological.py  test_tornadoes.py  test_transit_assets.py  test_tropical_cyclones.py  test_utilities.py  test_utils.py  test_weather.py  test_wq.py  update_expected.py
CHAPPIE/vulnerability/: RBI_pyNHD.ipynb  __init__.py  svi.py
Hazards/: CHAPPIE20231108_Tornado_Process.R  FLROAR20231108_Torn_AOI_Int_1996_2016.dbf  FLROAR20231108_Torn_AOI_Int_1996_2016.shx
Hazards/Tornadoes/: CHAPPIE20231113_Tornado_Process_GitHub.R  FLROAR20231108_Torn_Buffer_AOI_Intersection_1996_2016.dbf
Hazards/TropicalCyclones/: CHAPPIE20231113_Tropical_Cyclones_Process_GitHub.R  Thumbs.db
access/timeMatrix/: updated2_Generate_Cost_Matrices_PRO.py
demos/: PPBEP.py  Somerset.py
other/: zb_precipitation.py
vulnerability/SVI/: SVI.py  test_SVI.py
(+153 files in other folders)
