[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CHAPPIE", "CHAPPIE.hazards", "CHAPPIE.vulnerability"]

[project]
name = "CHAPPIE"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License ::  MIT",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygris",
    "geopandas>=0.10",
    "pandas>=1",
    "requests",
]
[project.urls]
"Homepage" = "https://github.com/USEPA/CHAPPIE"
"Bug Tracker" = "https://github.com/USEPA/CHAPPIE/issues"
