[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CHAPPIE", "CHAPPIE.hazards", "CHAPPIE.household", "CHAPPIE.assets", "CHAPPIE.eco_services"]

[project]
name = "CHAPPIE"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License ::  MIT",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/USEPA/CHAPPIE"
"Bug Tracker" = "https://github.com/USEPA/CHAPPIE/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.pytest.ini_options]
markers =
    unit: marks tests as unit tests
    integration: marks tests as integration tests 

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["CHAPPIE"]

